Fixed Management coding; Management menu only displays an Employee by employeeId; Added Product modification by Name, Description, and Price