@@ -1,5 +1,6 @@
-package com.toasternetwork.examples;
+package com.toasternetwork.inventory;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.*;
 
 import java.io.*;
@@ -9,17 +10,23 @@ import java.util.*;
 /**
  * The inventory database
  */
-public class InventoryDatabase {
-    private static String fileName;
-    private static File file;
+public class Database<T> {
+    private final String fileName;
+    private File file;
+
+    /**
+     * A new database
+     * @param fileName The file to load it from
+     */
+    public Database(String fileName) {
+        this.fileName = fileName;
+    }
 
     /**
      * Opens JSON Database for Inventory
-     * @param fileName The filename of the database to read from
      * @throws Exception The filename is likely not found
      */
-    public static void open(String fileName) throws Exception {
-        InventoryDatabase.fileName = fileName;
+    public void open() throws Exception {
         file = new File(fileName);
         checkFile();
     }
@@ -28,7 +35,7 @@ public class InventoryDatabase {
      * Identifies whether the file is an actual file
      * @throws Exception The file is not a file
      */
-    private static void checkFile() throws Exception {
+    private void checkFile() throws Exception {
         if(!file.exists()) {
             writeContents(new ArrayList<>());
         }
@@ -40,24 +47,27 @@ public class InventoryDatabase {
      * @return The contents of a JSON file
      * @throws IOException The file may not be proper or the file may not be readable
      */
-    public static List<Product> readFile() throws IOException {
+    public List<T> readFile() throws IOException {
         ObjectMapper mapper = new ObjectMapper();
-        return Arrays.asList(mapper.readValue(Paths.get(getFileName()).toFile(), Product[].class));
+
+        JsonNode node = mapper.readTree(Paths.get(getFileName()).toFile());
+        return List.of(mapper.convertValue(node, new TypeReference<T[]>() {}));
+
     }
 
     /**
      * Writes the JSON object to file
-     * @param products The JSON object to write
+     * @param elements The JSON object to write
      * @throws IOException The file may not be proper or the file may not be writable
      */
-    public static void writeContents(ArrayList<Product> products) throws IOException {
+    public void writeContents(ArrayList<T> elements) throws IOException {
         File file = new File(fileName);
         FileWriter writer = new FileWriter(file);
         PrintWriter pw = new PrintWriter(writer);
 
         ObjectMapper mapper = new ObjectMapper();
         mapper.enable(SerializationFeature.INDENT_OUTPUT);
-        String jsonStr = mapper.writeValueAsString(products);
+        String jsonStr = mapper.writeValueAsString(elements);
         pw.println(jsonStr);
         pw.close();
     }
@@ -66,7 +76,7 @@ public class InventoryDatabase {
      * Gets the registered filename of the single instance
      * @return The filename registered with the single instance
      */
-    public static String getFileName() {
+    public String getFileName() {
         return fileName;
     }
 }
